# Memeory-Manager-GC-

./: CMakeLists.txt  main.cpp
allocator/: allocator.h  mem_block.cpp  mem_block.h  mem_buffer.cpp  mem_buffer.h  pointer.h  smart_ptr.h  smart_ptr_type.h
memory_manager/: memory_manager.h
test/: mem_buffer_test.cpp  mem_buffer_test.h  tests.cpp  tests.h
